--- a/wellnessTracker/src/main/resources/templates/home.html
+++ b/wellnessTracker/src/main/resources/templates/home.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
-    <title>Spring Security Example</title>
+    <title>Spring Security Login</title>
 </head>
 <body>
-<h1>Welcome!</h1>
+<h1>Welcome to Fitness Tracker!</h1>
 
 <p>Click <a th:href="@{/hello}">here</a> to see a greeting.</p>
 </body>
